Fixed overlapping issue on wpadminbar

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -379,7 +379,7 @@ body.everest-forms-builder-setup,
 
 		.everest-forms-overlay {
 			width: 100%;
-			z-index: 140005;
+			z-index: 1;
 			overflow: hidden;
 			background: #f1f1f1;
 			position: absolute;
